--- a/index.html
+++ b/index.html
@@ -1,36 +1,150 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/3df637a2f2.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
-    <title>Mimo de madrinha</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!--JQuery-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <!-- Fonts Google -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <title>Document</title>
+  <script>
+  $(document).ready(function(){
+    $('.sidenav').sidenav();
+  });
+  </script>
 </head>
+
 <body>
-    <header>
-        <div class="menu-content">
-            <h1 class="logo"> Mimo de madrinha</h1>
-            <nav class="header-menu">
-                <ul class="list-itens">
-                    <li><a href="https://www.instagram.com/stories/highlights/17887589035786833/">PARCERIA</a></li>
-                    <li><a href="https://www.instagram.com/stories/highlights/17915409604456350/">Arcos</a></li>
-                    <li><a href="https://www.instagram.com/stories/highlights/17875220749595855/">Mesas</a></li>
-                    <li><a href="https://www.instagram.com/stories/highlights/18064775710223785/">Outros</a></li>
-                    <li><a href="https://www.instagram.com/mimodemadrinhaa/"><i class="fab fa-instagram"></i></a></li>
-                </ul>
-            </nav>
+  
+  <nav class="purple" style="padding: 0px 10px; height: 95px; line-height: 40px;">
+    <div class="nav-wrapper">
+      <a href="#" class="col brand-logo">MIMO DE MADRINHA</a>
+      <a class="sidenav-trigger btn-floating btn-small halfway-fab waves-effect waves-light red" data-target="mobile-nav">
+        <i class="material-icons">menu</i>
+      </a>
+      <ul class="right hide-on-med-and-down">
+        <li><a href="https://www.instagram.com/mimodemadrinhaa/">FESTAS</a></li>
+        <li><a href="https://www.instagram.com/mimodemadrinhaa/">EVENTOS</a></li>
+        <li><a href="https://www.instagram.com/mimodemadrinhaa/">CONTATO</a></li>
+      </ul>
+    </div>
+    <ul class="sidenav" id="mobile-nav">
+      <li><a href="https://martinssilva.github.io/landing-page/">Home</a></li>
+      <li><a href="https://www.instagram.com/mimodemadrinhaa/">Festas</a></li>
+      <li><a href="https://www.instagram.com/mimodemadrinhaa/">eventos</a></li>
+      <li><a href="https://www.instagram.com/mimodemadrinhaa/">contato</a></li>
+    </ul>
+  </nav>
+
+<div class="row" style="height:100%; padding-top:50px;">
+  <div class="row">
+    <div class="col s12 m4 l3">
+      <div class="card hoverable">
+        <div class="card-image" style="border-radius:40px;">
+          <img src="arcos.JPG">
+          <a class="btn-floating halfway-fab waves-effect waves-light red" href="https://www.instagram.com/stories/highlights/17915409604456350/"><i class="material-icons">link</i></a>
         </div>
-    </header>
-    <main>
-        <div class="main-content">
-            <h1 class="primary-text">A festa que sua criança merece</h1>
-            <h2 class="second-text">CLIQUE AQUI PARA SABER MAIS...</h2>
-            <div class="btns">
-                <button class="btn-personal"><a href="https://www.instagram.com/mimodemadrinhaa/">INSTAGRAM</a></button>
-            </div>
+        <div class="card-content">
+          <span class="card-title">Balões</span>
+          <p>Enfeites com balões, incluindo Arcos, telas e suportes.</p>
         </div>
-    </main>
+      </div>
+    </div>
+
+    <div class="col s12 m4 l3">
+      <div class="card hoverable">
+        <div class="card-image" style="border-radius:40px;">
+          <img src="bolos.JPG">
+          <a class="btn-floating halfway-fab waves-effect waves-light red" href="https://www.instagram.com/stories/highlights/18088700617107447/"><i class="material-icons">link</i></a>
+        </div>
+        <div class="card-content">
+          <span class="card-title">Bolos de enfeite</span>
+          <p>Bolos Fakes, para enfeitar e animar a festa ainda mais.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col s12 m4 l3">
+      <div class="card hoverable">
+        <div class="card-image" style="border-radius:40px;">
+          <img src="decoracao.JPG">
+          <a class="btn-floating halfway-fab waves-effect waves-light red" href="https://www.instagram.com/stories/highlights/18030890233277470/"><i class="material-icons">link</i></a>
+        </div>
+        <div class="card-content">
+          <span class="card-title">Itens de decoração</span>
+          <p>Personagens, nuvens, anjos, animais e muito mais.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col s12 m4 l3">
+      <div class="card hoverable">
+        <div class="card-image" style="border-radius:40px;">
+          <img src="mesas.JPG">
+          <a class="btn-floating halfway-fab waves-effect waves-light red" href="https://www.instagram.com/stories/highlights/17875220749595855/"><i class="material-icons">link</i></a>
+        </div>
+        <div class="card-content">
+          <span class="card-title">Mesas</span>
+          <p>Aluguel de mesas, Tudo em um só lugar.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col s12 m4 l3">
+      <div class="card hoverable">
+        <div class="card-image" style="border-radius:40px;">
+          <img src="bita2.JPG">
+          <a class="btn-floating halfway-fab waves-effect waves-light red" href="https://www.instagram.com/p/CZsdX2as-22/"><i class="material-icons">link</i></a>
+        </div>
+        <div class="card-content">
+          <span class="card-title">Kids: Bita</span>
+        </div>
+      </div>
+    </div>
+
+    <div class="col s12 m4 l3">
+      <div class="card hoverable">
+        <div class="card-image" style="border-radius:40px;">
+          <img src="mario.JPG">
+          <a class="btn-floating halfway-fab waves-effect waves-light red" href="https://www.instagram.com/p/Cd8s2B7Om8-/"><i class="material-icons">link</i></a>
+        </div>
+        <div class="card-content">
+          <span class="card-title">Kids: Mario</span>
+        </div>
+      </div>
+    </div>
+
+    <div class="col s12 m4 l3">
+      <div class="card hoverable">
+        <div class="card-image" style="border-radius:40px;">
+          <img src="bar.JPG">
+          <a class="btn-floating halfway-fab waves-effect waves-light red" href="https://www.instagram.com/p/Cdn7Up_uml1/"><i class="material-icons">link</i></a>
+        </div>
+        <div class="card-content">
+          <span class="card-title">Adultos:Chopp</span>
+        </div>
+      </div>
+    </div>
+
+    <div class="col s12 m4 l3">
+      <div class="card hoverable">
+        <div class="card-image" style="border-radius:40px;">
+          <img src="boteco.JPG">
+          <a class="btn-floating halfway-fab waves-effect waves-light red" href="https://www.instagram.com/p/Cca-tvXu5PU/"><i class="material-icons">link</i></a>
+        </div>
+        <div class="card-content">
+          <span class="card-title">Adultos: Boteco</span>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 </body>
 </html>
